(rule
 (targets oraft_proto.ml)
 (deps    oraft_proto.proto)
 (action  (run extprotc %{deps})))

(library
 (name        oraft)
 (public_name oraft)
 (libraries  batteries)
 (modules oraft)
 (flags -w -30)
 (synopsis ""))

(library
 (name        oraft_lwt)
 (public_name oraft-lwt)
 (preprocess (pps lwt_ppx))
 (libraries  lwt.unix logs logs.lwt oraft)
 (wrapped false)
 (modules oraft_lwt_s
          oraft_lwt
          oraft_lwt_conn_wrapper)
 (flags -w -30)
 (synopsis ""))

(library
 (name        oraft_lwt_extprot_io)
 (public_name oraft-lwt-extprot-io)
 (preprocess (pps lwt_ppx))
 (libraries  extprot oraft-lwt)
 (wrapped false)
 (modules oraft_proto oraft_lwt_extprot_io)
 (flags -w -30)
(synopsis ""))

(library
 (name        oraft_lwt_tls)
 (public_name oraft-lwt-tls)
 (preprocess (pps lwt_ppx))
 (libraries  tls.lwt oraft-lwt)
 (modules oraft_lwt_tls)
(synopsis ""))

(library
 (name        oraft_rsm)
 (public_name oraft-rsm)
 (preprocess (pps lwt_ppx))
 (libraries  extprot logs oraft-lwt-extprot-io)
 (flags -w -32)
 (modules  oraft_rsm_s oraft_rsm)
 (synopsis ""))
